@@ -30,4 +30,7 @@
     <string name="touchscreen_vibration_test_label">Тест обратной отдачи</string>
     <string name="setup_show_battery_status_label">Состояние батареи устройства</string>
     <string name="setup_show_controller_state_label">Показать состояние игрового контроллера</string>
+    <string name="cheat_dialog_ok">Исполнить</string>
+    <string name="cheat_dialog_title">Введите команду:</string>
+    <string name="cheat_dialog_cancel">Отмена</string>
 </resources>
