@@ -2,6 +2,7 @@ TheXTech Changelog.
 
 Changelog for 1.3.6 [WIP]
 -Added an ability to toggle drawing of the HUD and other on-screen meta data using F4 key
+-Added an ability to type cheats on Android using the Start+ShowKeyboard touchscreen key combination
 
 Changes for 1.3.5.3-1
 -Fixed autostart events behaviour
